[+] 脚本优化